Revert "fix(copy-btn): Remove negative spacing"
This reverts commit de6d4c64c67d578766e2807148e780793b5525f7.

--- a/src/assets/scss/_components/_bot-message.scss
+++ b/src/assets/scss/_components/_bot-message.scss
@@ -35,6 +35,11 @@
 		gap: $spacing-xs;
 		margin-top: $spacing-sm;
 		margin-bottom: 0;
+
+		&:not(:has(.docsbot-sources-title)) {
+			margin-top: -6px;
+			margin-bottom: calc($spacing-sm * -1);
+		}
 	}
 
 	.docsbot-copy-button {
